Details
-
Bug
-
Resolution: Fixed
-
Major
-
0.4.8-dev-432-gab7ddc4 https://github.com/reactos/reactos/commit/ab7ddc44f7ba8281ade75364861992d2f7f5b955
Description
RAPPS always opens "Available for installation" section on startup since 0.4.8-dev-432-gab7ddc4.
It turns out to be a problem in terms of user experience, especially when the user starts "Add/Remove Programs" control panel applet. In this case the user expects it to show the list of installed software with the ability to uninstall it. However the focus is on the "Available for installation" tree item and it appears visually as the first item in the tree, but it's not the case, because the vertical scrollbar of the tree control is not at the top position - this small detail is usually overlooked by the user.
This problem was noticed by me when watching the video that was recently shared in the chat: https://youtu.be/QKbluUScXY4?t=2102 (with timecode)
The best solution to this is adding a special command-line key for RAPPS which would make it show "Installed" section on startup, but otherwise when started without such key, it would still show "Available for installation" section by default.
Once the command-line key is implemented, "Add/Remove Programs" control panel applet has to be updated, so it would start RAPPS with this special key.
Attachments
Issue Links
- blocks
-
CORE-19419 Skip downloading RAPPS packages when invoked from Add/Remove Programs
-
- Resolved
-
- relates to
-
CORE-10783 Appwiz.cpl
-
- Resolved
-