[RAPPS] Add /APPWIZ command-line key to open "Installed" section

Addendum to ab7ddc44. CORE-18981