base/applications/rapps/include/unattended.h
@@ -1,5 +1,6 @@
 #pragma once
 
+#define CMD_KEY_APPWIZ L"APPWIZ"
 #define CMD_KEY_INSTALL L"INSTALL"
 #define CMD_KEY_SETUP L"SETUP"
 #define CMD_KEY_FIND L"FIND"
