base/applications/rapps/unattended.cpp
@@ -222,6 +222,7 @@ ParseCmdAndExecute(LPWSTR lpCmdLine, BOOL bIsFirstLaunch, int nCmdShow)
 {
     INT argc;
     LPWSTR *argv = CommandLineToArgvW(lpCmdLine, &argc);
+    BOOL bAppwizMode = FALSE;
 
     if (!argv)
     {
@@ -232,6 +233,11 @@ ParseCmdAndExecute(LPWSTR lpCmdLine, BOOL bIsFirstLaunch, int nCmdShow)
     GetStorageDirectory(Directory);
     CAppDB db(Directory);
 
+    if (argc > 1 && MatchCmdOption(argv[1], CMD_KEY_APPWIZ))
+    {
+        bAppwizMode = TRUE;
+    }
+
     if (SettingsInfo.bUpdateAtStart || bIsFirstLaunch)
     {
         db.RemoveCached();
@@ -239,7 +245,7 @@ ParseCmdAndExecute(LPWSTR lpCmdLine, BOOL bIsFirstLaunch, int nCmdShow)
     db.UpdateAvailable();
     db.UpdateInstalled();
 
-    if (argc == 1) // RAPPS is launched without options
+    if (argc == 1 || bAppwizMode) // RAPPS is launched without options or APPWIZ mode is requested
     {
         // Check whether the RAPPS MainWindow is already launched in another process
         HANDLE hMutex;
@@ -256,7 +262,7 @@ ParseCmdAndExecute(LPWSTR lpCmdLine, BOOL bIsFirstLaunch, int nCmdShow)
             return FALSE;
         }
 
-        CMainWindow wnd(&db);
+        CMainWindow wnd(&db, bAppwizMode);
         MainWindowLoop(&wnd, nCmdShow);
 
         if (hMutex)
